# quadsquad

./: .clang-tidy  .pre-commit-config.yaml  CMakeLists.txt  Dockerfile  README.md  run.sh
benchmark/: CMakeLists.txt  offline_mpc_sub.cpp  offline_mpc_tp.cpp  online_mpc.cpp  online_nn.cpp  sodo_gridlock_iter.cpp  utils.cpp  utils.h
src/: CMakeLists.txt
src/io/: netmp.h
src/quadsquad/: helpers.cpp  helpers.h  jump_provider.cpp  jump_provider.h  offline_evaluator.cpp  offline_evaluator.h  online_evaluator.cpp  online_evaluator.h  ot_provider.cpp  ot_provider.h  preproc.h  rand_gen_pool.cpp  rand_gen_pool.h  sharing.cpp  sharing.h  types.cpp  types.h
src/utils/: circuit.cpp  circuit.h  liquidity_matching.h  neural_network.h
test/: CMakeLists.txt  io.cpp  jump.cpp  offline.cpp  online.cpp  sharing.cpp  utils.cpp
